# oggdsf

./: ABOUT.rtf  ABOUT.txt  AUTHORS  BUILD.txt  COPYRIGHTS  COPYRIGHTS.rtf  ChangeLog.txt  HISTORY  README  VERSIONS
src/: Makefile.am  configure.ac
src/lib/codecs/tremor-lowmem/: codebook.c  floor0.c  floor1.c  framing.c  misc.h  res012.c
src/lib/helper/common/: FlacTypes.h  Log.h  OggTypes.h  SpeexTypes.h  TheoraTypes.h  VorbisTypes.h  util.h  xmlsettings.h
src/lib/helper/iDSHelper/: DSStringer.cpp  DSStringer.h  ReadMe.txt  iDSHelper-2005.vcproj  iDSHelper.cpp  iDSHelper.h  iDSHelper.vcproj  stdafx.cpp
src/tests/testCDROM/: ReadMe.txt  stdafx.cpp  stdafx.h  testCDROM-2005.vcproj  testCDROM.cpp  testCDROM.vcproj
src/tests/testCMML/: ReadMe.txt  stdafx.cpp  testCMML.cpp  testCMML.vcproj
src/tests/testCMMLParser/: ReadMe.txt  stdafx.cpp  testCMMLParser-2005.vcproj  testCMMLParser.cpp  testCMMLParser.vcproj
src/tests/testCircleBuffer/: ReadMe.txt  stdafx.cpp  testCircleBuffer-2005.vcproj  testCircleBuffer.cpp  testCircleBuffer.vcproj
src/tests/testCustomSource/: CustomSourceClass.cpp  CustomSourceClass.h  ReadMe.txt  stdafx.cpp  testCustomSource-2005.vcproj  testCustomSource.cpp  testCustomSource.vcproj
src/tests/testLibOOOgg/: OggPageFileWriter.cpp  OggPageFileWriter.h  ReadMe.txt  TestPatternOggPacketChecker.cpp  TestPatternOggPacketChecker.h  TestPatternOggPacketGenerator.cpp  TestPatternOggPacketGenerator.h  TestPatternOggPageChecker.cpp  TestPatternOggPageChecker.h  stdafx.cpp  stdafx.h  testLibOOOgg-2005.vcproj  testLibOOOgg.cpp  testLibOOOgg.vcproj
src/tests/testLoadLib/: ReadMe.txt  resourceppc.h  stdafx.cpp  testLoadLib-2005.vcproj  testLoadLib.cpp  testLoadLib.h  testLoadLib.vcproj  testLoadLibppc.rc  testLoadLibppc.rc2
src/tests/testMuxDemux/: OggPageFileWriter.cpp  OggPageFileWriter.h  ReadMe.txt  stdafx.cpp  testMuxDemux-2005.vcproj  testMuxDemux.cpp  testMuxDemux.vcproj
src/tests/testOOOggChef/: ReadMe.txt  stdafx.cpp  testOOOggChef-2005.vcproj  testOOOggChef.cpp  testOOOggChef.vcproj
src/tests/testOOOggMux/: ReadMe.txt  stdafx.cpp  testOOOggMux-2005.vcproj  testOOOggMux.cpp  testOOOggMux.vcproj
src/tests/testOOSpeexDec/: SpeexDecWriter.cpp  SpeexDecWriter.h  stdafx.cpp  testOOSpeexDec-2005.vcproj  testOOSpeexDec.cpp  testOOSpeexDec.vcproj
src/tests/testOOTremorDec/: TremorDecWriter.cpp  TremorDecWriter.h  stdafx.cpp  testOOTremorDec-2005.vcproj  testOOTremorDec.cpp  testOOTremorDec.vcproj
src/tests/testOOVorbisDec/: VorbisDecWriter.cpp  VorbisDecWriter.h  stdafx.cpp  testOOVorbisDec-2005.vcproj  testOOVorbisDec.cpp  testOOVorbisDec.vcproj
src/tests/testTemporal/: ReadMe.txt  stdafx.cpp  testTemporal-2005.vcproj  testTemporal.cpp  testTemporal.vcproj
src/tests/testVideoImageGrab/: Form1.cs  Form1.resx  testVideoImageGrab.csproj
src/tests/testlibOOOggSpeed1/: ReadMe.txt  stdafx.cpp  testlibOOOggSpeed1-2005.vcproj  testlibOOOggSpeed1.cpp  testlibOOOggSpeed1.vcproj
src/tests/testliboggSpeed1/: ReadMe.txt  stdafx.cpp  stdafx.h  testliboggSpeed1-2005.vcproj  testliboggSpeed1.cpp  testliboggSpeed1.vcproj
src/tests/testliboggzSpeed1/: ReadMe.txt  stdafx.cpp  testliboggzSpeed1.cpp  testliboggzSpeed1.vcproj
src/tools/AnxCutter/: AnxCutter-2005.vcproj  AnxCutter.cpp  AnxCutter.vcproj  ReadMe.txt  stdafx.cpp
src/tools/CLOgg/: CLOgg-2005.vcproj  CLOgg.cpp  CLOgg.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/CMMLDump/: CMMLDump-2005.vcproj  CMMLDump.cpp  CMMLDump.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/CMMLRip/: CMMLRip-2005.vcproj  CMMLRip.cpp  CMMLRip.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/CMMLValidate/: CMMLValidate-2005.vcproj  CMMLValidate.cpp  CMMLValidate.vcproj  ReadMe.txt  stdafx.cpp
src/tools/DNPlay/: DNPlay.csproj  frmDNPlay.cs  frmDNPlay.resx  frmOpenURL.cs  frmOpenURL.resx
src/tools/OOOggCommentDump/: OOOggCommentDump-2005.vcproj  OOOggCommentDump.cpp  OOOggCommentDump.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/OOOggDump/: OOOggDump-2005.vcproj  OOOggDump.cpp  OOOggDump.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/OOOggPacketise/: OOOggPacketDumper.cpp  OOOggPacketDumper.h  OOOggPacketise-2005.vcproj  OOOggPacketise.cpp  OOOggPacketise.vcproj  ReadMe.txt  stdafx.cpp
src/tools/OOOggPageInfo/: OOOggPageInfo-2005.vcproj  OOOggPageInfo.cpp  OOOggPageInfo.vcproj  ReadMe.txt  stdafx.cpp
src/tools/OOOggSeekFileMaker/: OOOggSeekFileMaker-2005.vcproj  OOOggSeekFileMaker.cpp  OOOggSeekFileMaker.vcproj  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/OOOggSeekFileQuery/: OOOggSeekFileQuery-2005.vcproj  OOOggSeekFileQuery.cpp  OOOggSeekFileQuery.vcproj  ReadMe.txt  stdafx.cpp
src/tools/OOOggSeekFileReader/: OOOggSeekFileReader-2005.vcproj  OOOggSeekFileReader.cpp  OOOggSeekFileReader.vcproj  ReadMe.txt  stdafx.cpp
src/tools/OOOggStat/: OOOggStat-2005.vcproj  OOOggStat.cpp  OOOggStat.vcproj  OOOggStat.vcproj.old  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/OOOggValidate/: OOOggValidate-2005.vcproj  OOOggValidate.cpp  OOOggValidate.vcproj  OggStreamValidationState.cpp  OggStreamValidationState.h  OggValidationState.cpp  OggValidationState.h  ReadMe.txt  stdafx.cpp  stdafx.h
src/tools/UnTransmoggrify/: OggFileWriter.cpp  OggFileWriter.h  ReadMe.txt  UnTransmoggrify-2005.vcproj  UnTransmoggrify.cpp  UnTransmoggrify.vcproj  stdafx.cpp
src/tools/iOCE/: frmAddComment.cs  frmAddComment.resx  frmMain.cs  frmMain.resx  iOCE.csproj
src/tools/iTranscode/: ReadMe.txt  iTranscode-2005.vcproj  iTranscode.cpp  iTranscode.vcproj  stdafx.cpp  stdafx.h
src/tools/mod_oggchef/: Makefile  README.txt  anx_time.c  anx_time.h  apr_stdcall.h  mod_oggchef-2005.vcproj  mod_oggchef.cpp  mod_oggchef.vcproj  modules.mk  query_utils.c  query_utils.h
src/tools/mod_timeslice/: Makefile  README.txt  apr_stdcall.h  mod_timeslice.cpp  mod_timeslice.vcproj  modules.mk
src/tools/oggChainSplitter/: ReadMe.txt  oggChainSplitter-2005.vcproj  oggChainSplitter.cpp  oggChainSplitter.vcproj  stdafx.cpp  stdafx.h
src/tools/oggenc/: oggenc.cpp  oggenc.sln  oggenc.vcproj
unix/: Makefile.am  configure.ac
(+3433 files in other folders)
